--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "jsdom": "~0.2.15",
     "coffee-script": "~1.3.3",
-    "superagent": "~0.9.3"
+    "superagent": "~0.9.3",
+    "kue": "~0.4.0"
   }
 }
