--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "jsdom": "~0.2.15",
     "coffee-script": "~1.3.3",
     "superagent": "~0.9.3",
-    "kue": "~0.4.0"
+    "kue": "~0.4.0",
+    "redis": "~0.8.1",
+    "hiredis": "~0.1.14"
   }
 }
