--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "redis": "~0.8.1",
     "hiredis": "~0.1.14",
     "express": "~3.0.0rc4",
-    "ejs": "~0.8.3"
+    "jade": "~0.27.5"
   }
 }
