--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "fetch": "./node_modules/coffee-script/bin/coffee index-page-parser.coffee",
     "clean": "rm -rf screenshot video source-code",
     "process": "./node_modules/coffee-script/bin/coffee job-process.coffee",
-    "server": "./node_modules/coffee-script/bin/coffee server.coffee"
+    "start": "./node_modules/coffee-script/bin/coffee server.coffee"
   },
   "author": "Steven Yang",
   "license": "MIT",
