--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "fetch": "./node_modules/coffee-script/bin/coffee index-page-parser.coffee",
-    "clean": "rm -rf screenshot video source-code",
+    "clean": "rm -r screenshot video source-code",
     "process": "./node_modules/coffee-script/bin/coffee job-process.coffee",
     "start": "./node_modules/coffee-script/bin/coffee server.coffee"
   },
@@ -19,6 +19,7 @@
     "redis": "~0.8.1",
     "hiredis": "~0.1.14",
     "express": "~3.0.0rc4",
-    "jade": "~0.27.5"
+    "jade": "~0.27.5",
+    "mongoskin": "~0.4.4"
   }
 }
